@@ -1,0 +1,14 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderInline {A} at (0,0) size 543x18
+        RenderInline (generated) at (0,0) size 356x18
+          RenderText at (0,0) size 356x18
+            text run at (0,0) width 356: "This test passes if it does not crash, and this text appears."
+        RenderText {#text} at (356,0) size 187x18
+          text run at (356,0) width 187: "But it fails if this text appears."
+      RenderText {#text} at (0,0) size 0x0
+      RenderText {#text} at (0,0) size 0x0
+      RenderText {#text} at (0,0) size 0x0
