@@ -1,0 +1,11 @@
+<html>
+<head>
+<style>
+    .linkAddComment {visibility:hidden;} 
+    .linkAddComment:before {content:"This test passes if it does not crash, and this text appears."; visibility:visible;}
+</style>
+</head>
+<body>
+<a class="linkAddComment">But it fails if this text appears.</a>
+</body>
+</html>
